--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -4,7 +4,7 @@ body
 	font-size: 16px
 	line-height: (23/16)
 	color: $grey
-	
+
 h1, h2, h3, h4, h5, h6
 	font-weight: normal
 
@@ -14,22 +14,22 @@ a
 
 img
 	display: block
-	
+
 .out
 	overflow: hidden
-	
+
 .container
 	max-width: 1140px
 	margin: 0 auto
 	padding: 0 15px
-	
+
 .title-md
 	font-size: 32px
 	font-weight: 500
 	line-height: (52/32)
 	text-transform: uppercase
 	color: $black
-	
+
 .link
 	color: $red
 	border-bottom: 1px solid $red
@@ -37,27 +37,40 @@ img
 		border-bottom-color: transparent
 	&_upper
 		text-transform: uppercase
-	
+
 .btn
 	display: inline-block
-	padding: 10px 25px
+	height: 45px
+	padding: 0 24px
 	border-radius: 2px
 	background-color: $white
 	border: 2px solid $red
+	outline: $red solid 1px
+	outline-offset: -2px
+	transition: all .7s cubic-bezier(0.19, 1, 0.22, 1)
 	text-transform: uppercase
 	color: $black
 	font-size: 14px
 	font-weight: 700
+	line-height: 44px
 	cursor: pointer
 	+hover
-	
+		outline-color: rgba(255, 255, 255, 0)
+		outline-offset: 12px
+		background: $red
+		color: $white
+			
 .sect-bg
 	background: url('../img/bg/sect-bg.jpg') repeat 50% 50%
-	
+
+.js-next-section
+	position: relative
+
 .next-section
 	position: absolute
 	left: calc(50% - 12px)
+	bottom: 40px
+	z-index: 1
 	background: 0 0
 	&__icon
 		font-size: 58px
-	
