--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -2,7 +2,11 @@
 @import generated/sprite-svg
 @import generated/sprite-png
 @import lib/owl
+@import common
 @import components/header
 @import components/benefits
 @import components/testimonials
-@import common
+@import components/team
+@import components/achieve
+@import components/delivery-teaser
+@import components/ask
