--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -4,9 +4,11 @@
 @import lib/owl
 @import common
 @import components/header
+@import components/footer
 @import components/benefits
 @import components/testimonials
 @import components/team
 @import components/achieve
 @import components/delivery-teaser
 @import components/ask
+@import components/socials
