--- a/src/sass/components/_delivery-teaser.sass
+++ b/src/sass/components/_delivery-teaser.sass
@@ -1,10 +1,14 @@
 .delivery-teaser
 	&__container
-		max-width: 814px
+		max-width: 844px
 	&__pic
-		margin: 30px 0 0
+		margin: 15px 0 0 -10px
 	&__row
-		margin: -30px 0 50px
+		margin: -30px 0 20px
 		text-align: center
+	&__btn
+		padding: 0 29px
 	&_default
-		padding: 70px 0 80px
+		padding: 65px 0 160px
+		.next-section
+			bottom: 11%
