--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -1,5 +1,5 @@
 .header
-	padding: 20px 0
+	padding: 62px 0 25px
 	color: $black
 	&__container
 		font-size: 0
@@ -7,7 +7,7 @@
 		position: relative
 		display: inline-block
 		vertical-align: middle
-		padding: 0 15px
+		padding: 0 17px
 		&:first-child
 			padding-left: 0
 		&:last-child::after
@@ -16,10 +16,12 @@
 			content: ''
 			position: absolute
 			right: 0
-			top: 0
+			top: -5px
 			background: #e6e7e8
 			height: 41px
 			width: 1px
+	&__phone::after
+		top: 5px
 	&__logo
 		display: block
 		+s('logo')
@@ -34,23 +36,22 @@
 			font-size: 13px
 			font-weight: 300
 	&__bar
+		padding-right: 0
 		&-col
 			position: relative
 			display: inline-block
 			vertical-align: middle
-			padding-right: 30px
+			padding-right: 40px
+			&::after
+				@extend .header__col::after
+				right: 18px
+				top: -9px
 			&:last-child
 				padding-right: 0
 			&:last-child::after
 				display: none
-			&::after
-				position: absolute
-				right: 15px
-				top: 0
-				content: ''
-				background: #e6e7e8
-				height: 41px
-				width: 1px
+			&:nth-child(2)::after
+				top: -8px
 		&-link
 			position: relative
 			display: block
@@ -101,7 +102,7 @@
 			right: 0
 			background: $red
 		&:not(:last-child)
-			margin-right: 20px
+			margin-right: 33px
 		&.is-active
 			border-bottom-color: $red
 			&::after
