--- a/src/sass/components/_team.sass
+++ b/src/sass/components/_team.sass
@@ -1,6 +1,6 @@
 .team
 	&__in
-		margin: 50px 0 0
+		margin: 45px 0 30px
 		+clr
 	&__col
 		float: left
@@ -16,10 +16,9 @@
 		&-text
 			position: relative
 			margin: 35px 0 0
-			padding: 0 20px 15px
+			padding: 0 20px 15px 28px
 			font-size: 15px
 		&-title
-			margin-bottom: 10px
 			color: $black
 			font-weight: 700
 		&-descr
@@ -27,15 +26,15 @@
 		&-quote
 			position: absolute
 			fill: $red
-			font-size: 12px
+			font-size: 13px
 			&_l
 				top: 0
 				left: 0
 			&_r
 				right: 0
-				bottom: 0
+				bottom: 10%
 		&-name
-			margin-top: 10px
+			margin-top: 8px
 			font-weight: 500
 			color: $black
 	&__slider
@@ -62,9 +61,12 @@
 			font-weight: 400
 		&-tel
 			display: block
+			margin-bottom: 2px
 			font-weight: 400
 		&-mail
 			display: block
 			font-weight: 500
 	&_default
-		padding: 70px 0
+		padding: 65px 0 132px
+		.next-section
+			bottom: 8%
