--- a/src/templates/components/_delivery-teaser.jade
+++ b/src/templates/components/_delivery-teaser.jade
@@ -7,5 +7,5 @@ if deliveryTeaser ? deliveryTeaser : deliveryTeaser = []
 		+e.pic
 			+e.IMG(src='img/content/delivery-teaser.jpg')
 		+e.row
-			+b.A.btn(href='#!') УСЛОВИЯ ДОСТАВКИ
+			+e.A.btn.btn(href='#!') УСЛОВИЯ ДОСТАВКИ
 //end delivery-teaser
