--- a/src/sass/components/_achieve.sass
+++ b/src/sass/components/_achieve.sass
@@ -1,10 +1,10 @@
 .achieve
 	&__slider
-		margin: 45px 0 0
+		margin: 35px 0 0
 		&-item
 			display: block
 			padding: 5px
-			outline: 2px solid transparent
+			outline: 3px solid transparent
 			+tr(outline .3s)
 			background: $white
 			font-size: 0
@@ -16,12 +16,13 @@
 			width: calc(100% - 120px)
 			padding: 0 15px
 			text-align: center
+			line-height: 1.3
 			color: $black
 		&-title
 			font-size: 22px
 			font-weight: 500
 		&-descr
-			margin-top: 10px
+			margin-top: 5px
 			font-size: 15px
 		&-pic
 			display: inline-block
@@ -30,9 +31,12 @@
 			height: 170px
 			img
 				height: 100%
+		.owl-stage
+			display: flex
+			align-items: center
 		.owl-item
-			padding: 2px
-				
+			padding: 3px
+			
 	&_default
-		padding: 70px 0 80px
+		padding: 62px 0 80px
 		
