--- a/src/sass/components/_ask.sass
+++ b/src/sass/components/_ask.sass
@@ -1,3 +1,32 @@
 .ask
-	&__input
-		padding: 0 10px 0 50px
+	&__container
+		max-width: 910px
+	&__descr
+		text-align: center
+		font-size: 20px
+		line-height: 33px
+		color: $black
+	&__form-in
+		margin-top: 17px
+		margin-left: 75px
+		+clr
+	&__form-col
+		float: left
+		width: percentage(258 / 805)
+		&:nth-child(3)
+			padding-right: 21px
+			text-align: center
+		& + &
+			margin-left: 15px
+	&__form-field
+		& + &
+			margin-top: 15px
+	&__form-message
+		min-height: 105px
+	&__form-descr
+		margin-top: 13px
+		font-size: 13px
+		
+	&_default
+		padding: 45px 0 60px
+	
