--- a/src/sass/components/_testimonials.sass
+++ b/src/sass/components/_testimonials.sass
@@ -1,22 +1,26 @@
 .testimonials
 	&__container
+		max-width: 1200px
 		+clr
 	&__col
 		float: left
 		width: 50%
+		&:nth-child(1)
+			padding-left: 15px
 	&__slider
 		&-item
 			position: relative
-			padding-top: 131%
+			padding-top: 127.7%
 			z-index: 0
 			cursor: grab
 		&-title
 			position: absolute
-			top: 10%
+			top: 9.7%
 			left: 0
 			right: 0
 			z-index: 1
 			padding: 0 15px
+			line-height: 1.3
 			mark
 				display: block
 				color: $red
@@ -28,17 +32,21 @@
 		&-link
 			position: absolute
 			left: 50%
-			bottom: 12%
+			bottom: 11%
 			transform: translateX(-50%)
 			z-index: 1
 	&__block
+		padding: 45px 30px 10px 10px
 		&-item
 			position: relative
-			padding: 15px
+			padding: 25px 30px
 			border-bottom: 1px dashed #e0e1e2
+		&-text
+			text-align: justify
 		&-link
 			font-size: 12px
 			font-weight: 700
+			letter-spacing: .07em
 		&-name
 			display: inline-block
 			vertical-align: middle
@@ -49,13 +57,14 @@
 		&-quote
 			position: absolute
 			fill: $red
+			font-size: 13px
 			&_l
-				top: 0
-				left: 0
+				top: 17%
+				left: 1%
 			&_r
-				right: 0
-				bottom: 0
+				right: 1%
+				bottom: 34%
 		
 		&-bottom
-			margin: 30px 0
+			margin: 30px 0 0
 			text-align: center
