--- a/src/templates/layouts/_layout.jade
+++ b/src/templates/layouts/_layout.jade
@@ -13,6 +13,8 @@ html
       block content
     //END out
 
+    block footer
+      include ../partials/_footer
     //LOAD SCRIPTS
     block scripts
       script(type="text/javascript" src="js/app.js")
