--- a/src/sass/components/_achieve.sass
+++ b/src/sass/components/_achieve.sass
@@ -36,6 +36,12 @@
 			align-items: center
 		.owl-item
 			padding: 3px
+		.owl-carousel__btn_next
+			right: -11.5%
+		.owl-carousel__btn_prev
+			left: -11.5%
+		.owl-carousel__btn-icon, .owl-carousel__btn-icon
+			font-size: 105px
 			
 	&_default
 		padding: 62px 0 80px
