--- a/src/sass/components/_team.sass
+++ b/src/sass/components/_team.sass
@@ -38,10 +38,12 @@
 			font-weight: 500
 			color: $black
 	&__slider
+		.owl-carousel__btn
+			top: 49%
 		.owl-carousel__btn_prev
-			left: -500px
+			left: -71%
 		.owl-carousel__btn_next
-			right: -130px
+			right: -19%
 		.owl-carousel__btn-icon
 			font-size: 141px
 	&__person
@@ -64,7 +66,6 @@
 			margin-bottom: 2px
 			font-weight: 400
 		&-mail
-			display: block
 			font-weight: 500
 	&_default
 		padding: 65px 0 132px
