--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -1,4 +1,6 @@
 body
+	min-width: 320px
+	min-height: 100%
 	font-family: 'Roboto', Arial, sans-serif
 	font-weight: 300
 	font-size: 16px
@@ -138,13 +140,9 @@ img
 		top: 50%
 		transform: translateY(-50%)
 		z-index: 1
-		padding: 5px
+		padding: 3px
 		cursor: pointer
-		&_prev
-			left: 30px
-		&_next
-			right: 30px
 		&-icon
-			font-size: 43px
-			fill: none
-			stroke: $grey
+			fill: $black
+			stroke: none
+		
