--- a/src/sass/components/_testimonials.sass
+++ b/src/sass/components/_testimonials.sass
@@ -35,6 +35,14 @@
 			bottom: 11%
 			transform: translateX(-50%)
 			z-index: 1
+		.owl-carousel__btn_prev
+			left: 4.5%
+		.owl-carousel__btn_next
+			right: 4.5%
+		.owl-carousel__btn-icon
+			font-size: 43px
+			fill: none
+			stroke: $black
 	&__block
 		padding: 45px 30px 10px 10px
 		&-item
