--- a/src/sass/components/_benefits.sass
+++ b/src/sass/components/_benefits.sass
@@ -10,7 +10,8 @@
 		text-align: center
 		width: 33.33333%
 		&-pic
-			height: 100px
+			height: 90px
+			margin-bottom: 12px
 			+vertical
 			&::after
 				content: ''
