--- a/src/templates/layouts/_layout.jade
+++ b/src/templates/layouts/_layout.jade
@@ -10,10 +10,10 @@ html
     block header
         include ../partials/_header
 
-    block content
+    //block content
 
-    block footer
-      include ../partials/_footer
+    //block footer
+    //  include ../partials/_footer
 
     //LOAD SCRIPTS
     block scripts
