--- a/src/templates/partials/_header.jade
+++ b/src/templates/partials/_header.jade
@@ -1,5 +1,7 @@
 //BEGIN header
 +b.HEADER.header
+  +b.BUTTON(type='button').nav-toggle.js-nav-toggle
+    +e.SPAN.icon
   +e.container.container
     +e.col
       +e.A.logo(href='#!')
