--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -131,8 +131,15 @@ img
 	bottom: 5%
 	z-index: 1
 	background: 0 0
+	animation: mouse-anim 1s infinite alternate
 	&__icon
 		font-size: 58px
+		
+@keyframes mouse-anim
+	0%
+		transform: translateY(-5px)
+	100%
+		transform: translateY(-15px)
 		
 .owl-carousel
 	&__btn
@@ -145,4 +152,3 @@ img
 		&-icon
 			fill: $black
 			stroke: none
-		
