--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -5,6 +5,7 @@
 @import common
 @import components/header
 @import components/footer
+@import components/nav-toggle
 @import components/benefits
 @import components/testimonials
 @import components/team
