--- a/src/sass/components/_delivery-teaser.sass
+++ b/src/sass/components/_delivery-teaser.sass
@@ -3,12 +3,25 @@
 		max-width: 844px
 	&__pic
 		margin: 15px 0 0 -10px
+		+r(599)
+			margin: 15px -10px 0
 	&__row
 		margin: -30px 0 20px
 		text-align: center
+		+sm
+			margin: 0
+		+r(599)
+			margin-top: 15px
 	&__btn
 		padding: 0 29px
 	&_default
 		padding: 65px 0 160px
+		+md
+			padding: 65px 0 80px
+		+sm
+			padding: 50px 0
 		.next-section
 			bottom: 11%
+			+md
+				bottom: 1%
+			
