--- a/src/sass/components/_testimonials.sass
+++ b/src/sass/components/_testimonials.sass
@@ -91,8 +91,14 @@
 			vertical-align: middle
 			margin-left: 25px
 			font-weight: 500
+			+r(424)
+				margin-left: 5px
+				font-size: 15px
 		&-row
 			margin-top: 10px
+			+r(424)
+				margin: 5px -25px 0
+				text-align: center
 		&-quote
 			position: absolute
 			fill: $red
