--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -133,7 +133,7 @@
 		pointer-events: none
 		opacity: 0
 		position: fixed
-		top: 0
+		top: 116px
 		left: 0
 		right: 0
 		bottom: 0
@@ -141,9 +141,11 @@
 		display: flex
 		justify-content: center
 		flex-direction: column
+		overflow: auto
 		transition: opacity .25s ease-in-out, transform .3s cubic-bezier(0.68, -0.55, 0.27, 1.55)
 		transform: scaleX(.6)
 		background: $white
+		box-shadow: inset 0 0 10px 5px rgba(0,0,0,0.35)
 	&__link
 		position: relative
 		display: inline-block
@@ -154,9 +156,11 @@
 		border-bottom: 2px solid  #e7e8e9
 		+xs
 			display: block
-			padding: 30px 10px
+			padding: 25px 10px
 			font-size: 18px
 			line-height: 1
+		+rh(374)
+			padding: 20px 10px!important
 		&::after
 			content: ''
 			position: absolute
