--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -160,7 +160,7 @@
 			font-size: 18px
 			line-height: 1
 		+rh(374)
-			padding: 20px 10px!important
+			padding: 10px!important
 		&::after
 			content: ''
 			position: absolute
