--- a/src/templates/partials/_header.jade
+++ b/src/templates/partials/_header.jade
@@ -11,6 +11,7 @@
       +b.A.nav__link.is-active(href='#!') БЛОГ
       +b.A.nav__link(href='#!') СОТРУДНИЧЕСТВО
       +b.A.nav__link(href='#!') КОНТАКТЫ
+      +b.A.nav__link(href='#!') ПОРТФОЛИО
     +e.col.header__phone
       +e.A.phone-link(href='tel:88001234567') 8 (800) 123-45-67
       +e.SPAN.phone-text Звонок по РФ бесплатный
