--- a/src/templates/partials/_header.jade
+++ b/src/templates/partials/_header.jade
@@ -12,9 +12,10 @@
       +b.A.nav__link(href='#!') СОТРУДНИЧЕСТВО
       +b.A.nav__link(href='#!') КОНТАКТЫ
       +b.A.nav__link(href='#!') ПОРТФОЛИО
-    +e.col.header__phone
-      +e.A.phone-link(href='tel:88001234567') 8 (800) 123-45-67
-      +e.SPAN.phone-text Звонок по РФ бесплатный
+    +e.col
+      +e.phone
+        +e.A.phone-link(href='tel:88001234567') 8 (800) 123-45-67
+        +e.SPAN.phone-text Звонок по РФ бесплатный
     +e.col.header__bar
       +e.bar-col
         +e.A.bar-link._mail(href='#!')
