--- a/src/templates/components/_testimonials.jade
+++ b/src/templates/components/_testimonials.jade
@@ -19,7 +19,7 @@ if testimonials ? testimonials : testimonials = []
 			-var i=0
 			while i < 3
 				+e.block-item
-					+e.BLOCKQUOTE.block-text Изготовление буклетов – это услуга, которая пользуется большим спросом в связи высокой эффективностью данного вида полиграфии. Буклет – это разновидность печатной продукции, представляющая собой.
+					+e.BLOCKQUOTE.block-text.js-dot Изготовление буклетов – это услуга, которая пользуется большим спросом в связи высокой эффективностью данного вида полиграфии. Буклет – это разновидность печатной продукции, представляющая собой.
 					+e.block-row
 						+e.A.block-link.link._upper(href='#!') смотреть оригинал
 						+e.block-name ОАО "ПК "БАЛТИКА"
