--- a/src/templates/partials/_footer.jade
+++ b/src/templates/partials/_footer.jade
@@ -2,7 +2,7 @@
 +b.FOOTER.footer
 	+e.container.container
 		+e.col
-			+e.title.title-sm Штрих.ру
+			+e.H4.title.title-sm Штрих.ру
 			+e.UL.list
 				+e.LI
 					+e.A(href='#!') О компании
@@ -20,7 +20,7 @@
 					+e.A(href='#!') Спец. условия для РА
 
 		+e.col
-			+e.title.title-sm НАШИ УСЛУГИ
+			+e.H4.title.title-sm НАШИ УСЛУГИ
 			+e.UL.list
 				+e.LI
 					+e.A(href='#!') Производство календарей
@@ -34,7 +34,7 @@
 					+e.A(href='#!') Разработка фирменного стиля
 
 		+e.col
-			+e.title.title-sm помощь по сайту
+			+e.H4.title.title-sm помощь по сайту
 			+e.UL.list
 				+e.LI
 					+e.A(href='#!') Как купить?
@@ -46,7 +46,7 @@
 					+e.A(href='#!') Задать вопрос
 
 		+e.col.ADDRESS.footer__address
-			+e.title.title-sm Связаться с нами
+			+e.H4.title.title-sm Связаться с нами
 			+e.address-item
 				+e.address-city МОСКВА
 				+e.address-str Адрес: ул. Яккиманка 45/3
@@ -65,7 +65,7 @@
 				+e.A.address-tel(href='tel:88452338690') 8-8452 33-86-90
 
 		+e.col
-			+e.title.title-sm МЫ В СЕТИ
+			+e.H4.title.title-sm МЫ В СЕТИ
 			//-socials
 			-var socialsList = [{picClass: 'fb'}, {picClass: 'tw'}, {picClass: 'vk'}, {picClass: 'inst'}];
 			include ../components/_socials
