--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -24,7 +24,12 @@ a
 img
 	display: block
 	width: 100%
-
+.obj-fit
+	width: 100%
+	height: 100%
+	object-fit: cover
+	font-family: 'object-fit: cover;'
+	
 .container
 	max-width: 1140px
 	margin: 0 auto
@@ -47,6 +52,11 @@ img
 	@extend .title-md
 	font-size: 16px
 	font-weight: 900
+.title-xs
+	font-size: 20px
+	font-weight: 700
+	color: $black
+	line-height: 22px
 
 .link
 	color: $red
