--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -3,6 +3,7 @@
 @import generated/sprite-png
 @import lib/owl
 @import common
+
 @import components/header
 @import components/footer
 @import components/nav-toggle
@@ -12,4 +13,6 @@
 @import components/achieve
 @import components/delivery-teaser
 @import components/ask
-@import components/socials
+@import components/other-comp
+
+@import pages/blog
