--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -2,6 +2,10 @@
 title: Index Page
 ---
 extends layouts/_layout
+
+block header
+	include partials/_header
+
 block content
 	+b.MAIN
 		// begin screen-slider
